--- a/package.json
+++ b/package.json
@@ -10,9 +10,29 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-cdk/aws-lambda": "^1.3.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.3.0",
+    "@aws-cdk/aws-sam": "^1.3.0",
+    "@aws-cdk/aws-serverless": "^0.28.0",
+    "@aws-cdk/cdk": "^0.36.1",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-proposal-do-expressions": "^7.5.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-partial-application": "^7.4.4",
+    "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/preset-env": "^7.5.4",
+    "@babel/register": "^7.5.5",
     "@types/node": "8.10.45",
-    "typescript": "^3.3.3333",
-    "aws-cdk": "^1.3.0"
+    "aws-cdk": "^1.3.0",
+    "babel-eslint": "^11.0.0-beta.0",
+    "babel-loader": "^8.0.6",
+    "cdk": "^1.3.0",
+    "typescript": "^3.3.3333"
   },
   "dependencies": {
     "@aws-cdk/aws-sns": "^1.3.0",
