--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "spike2": "bin/spike2.js"
   },
   "scripts": {
+    "package": "./scripts/package.sh",
+    "deploy": "./scripts/deploy.sh",
+    "start": "SAM_LOCAL=true cdk synth > .template.yaml && sam local start-api -t .template.yaml",
     "test": "tsc",
     "test:watch": "tsc -w",
     "cdk": "cdk"
@@ -27,17 +30,14 @@
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.5.5",
-    "@types/node": "8.10.45",
     "aws-cdk": "^1.3.0",
     "babel-eslint": "^11.0.0-beta.0",
     "babel-loader": "^8.0.6",
     "cdk": "^1.3.0",
-    "typescript": "^3.3.3333"
-  },
-  "dependencies": {
     "@aws-cdk/aws-sns": "^1.3.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
     "@aws-cdk/aws-sqs": "^1.3.0",
     "@aws-cdk/core": "^1.3.0"
-  }
+  },
+  "dependencies": {}
 }
