--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "spike2": "bin/spike2.js"
   },
   "scripts": {
+    "build": "./scripts/build.sh",
     "package": "./scripts/package.sh",
     "deploy": "./scripts/deploy.sh",
+    "deploy:code": "./scripts/deploy-code.sh",
     "start": "SAM_LOCAL=true cdk synth > .template.yaml && sam local start-api -t .template.yaml",
     "test": "tsc",
     "test:watch": "tsc -w",
@@ -37,7 +39,11 @@
     "@aws-cdk/aws-sns": "^1.3.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
     "@aws-cdk/aws-sqs": "^1.3.0",
-    "@aws-cdk/core": "^1.3.0"
+    "@aws-cdk/core": "^1.3.0",
+    "terser-webpack-plugin": "^1.3.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "async_iter": "^1.1.4"
   },
   "dependencies": {}
 }
