--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "package": "./scripts/package.sh",
     "deploy": "./scripts/deploy.sh",
     "deploy:code": "./scripts/deploy-code.sh",
+    "prestart": "./scripts/build.sh",
     "start": "SAM_LOCAL=true cdk synth > .template.yaml && sam local start-api -t .template.yaml",
     "test": "tsc",
     "test:watch": "tsc -w",
@@ -42,8 +43,7 @@
     "@aws-cdk/core": "^1.3.0",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "async_iter": "^1.1.4"
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {}
 }
