--- a/handlers/goodbye-world/builds/package.json
+++ b/handlers/goodbye-world/builds/package.json
@@ -1,6 +1,11 @@
 {
   "name": "goodbye-world",
   "version": "0.1.0",
-  "devDependencies": {},
-  "dependencies": {}
+  "devDependencies": {
+    "aws-sdk-as-promise": "0.0.1"
+  },
+  "dependencies": {
+    "mysql": "^2.17.1",
+    "knex": "^0.19.1"
+  }
 }
