--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "deploy": "./scripts/deploy.sh",
     "deploy:code": "./scripts/deploy-code.sh",
     "prestart": "./scripts/build.sh",
-    "start": "SAM_LOCAL=true cdk synth > .template.yaml && sam local start-api -t .template.yaml",
+    "start": "./scripts/start.sh",
     "postinstall": "./scripts/postinstall.sh",
     "test": "tsc",
     "test:watch": "tsc -w",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "logs": "./scripts/logs.sh"
   },
   "devDependencies": {
-    "@aws-cdk/aws-lambda": "^1.3.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.3.0",
-    "@aws-cdk/aws-sam": "^1.3.0",
+    "@aws-cdk/aws-iam": "^1.4.0",
+    "@aws-cdk/aws-lambda": "^1.4.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.4.0",
+    "@aws-cdk/aws-rds": "^1.4.0",
+    "@aws-cdk/aws-sam": "^1.4.0",
     "@aws-cdk/aws-serverless": "^0.28.0",
+    "@aws-cdk/aws-sns": "^1.4.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.4.0",
+    "@aws-cdk/aws-sqs": "^1.4.0",
     "@aws-cdk/cdk": "^0.36.1",
+    "@aws-cdk/core": "^1.4.0",
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.0",
@@ -32,19 +39,19 @@
     "@babel/plugin-proposal-partial-application": "^7.4.4",
     "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-transform-strict-mode": "^7.2.0",
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.5.5",
-    "aws-cdk": "^1.3.0",
+    "aws-cdk": "^1.4.0",
     "babel-eslint": "^11.0.0-beta.0",
     "babel-loader": "^8.0.6",
-    "cdk": "^1.3.0",
-    "@aws-cdk/aws-sns": "^1.3.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
-    "@aws-cdk/aws-sqs": "^1.3.0",
-    "@aws-cdk/core": "^1.3.0",
+    "cdk": "^1.4.0",
     "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.39.1",
+    "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "mysql": "^2.17.1",
+    "knex": "^0.19.1"
+  }
 }
