--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "babel-eslint": "^11.0.0-beta.0",
     "babel-loader": "^8.0.6",
     "cdk": "^1.4.0",
+    "mysql2": "^1.6.5",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
-    "mysql": "^2.17.1",
     "knex": "^0.19.1"
   }
 }
